# cxx-reflection

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cxx-reflection-ci.yml
docs/: Dynamic Store Fields Type Info with C++.md  dynamic_store_fields_type_info_with_cpp.md  implement_fuzzy_type_match_during_compile_time.md
include/: cxx_reflection.h  noaland_lib.h  template.h
src/: CMakeLists.txt
src/lib/: CMakeLists.txt  cxx_reflection.cpp
src/main/: CMakeLists.txt
tests/: CMakeLists.txt  noaland_lib.cpp  noaland_lib_tests.cpp  reflection_tests.cpp  test_template.cpp
